/**
 * Communication protocol used to obtain client session.
 * @author Tomasz Lichon
 * @copyright (C) 2015 ACK CYFRONET AGH
 * @copyright This software is released under the MIT license cited in
 * 'LICENSE.txt'
 */

package one.clproto;

import "event_messages.proto";

message HandshakeRequest {
    optional bytes session_id = 1;
    optional Token token      = 2;
}

message HandshakeResponse {
    required bytes        session_id    = 1;
    repeated Subscription subscriptions = 2;
}

message Token {
    required bytes value = 1;
}

